<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/large_margin"
      >



        <TextView
            android:id="@+id/text_view_take_video"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="@dimen/large_margin"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center_horizontal"
            android:layout_marginHorizontal="@dimen/xx_large_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/recorde_video"
            android:textAppearance="@style/TextTitle" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/image_button_close"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="end"
            android:padding="5dp"
            app:layout_constraintTop_toTopOf="@+id/text_view_take_video"
            app:layout_constraintBottom_toBottomOf="@+id/text_view_take_video"
            app:layout_constraintStart_toEndOf="@+id/text_view_take_video"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/ic_warn"
            android:contentDescription="@string/close_alert_dialog" />

        <TextView
            android:id="@+id/text_view_sub_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/normal_padding"
            app:layout_constraintTop_toBottomOf="@+id/text_view_take_video"
            android:text="@string/take_video_role"
            android:textAppearance="@style/SecondTitle" />

        <CheckBox
            android:id="@+id/checkbox_black_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/normal_padding"
            app:layout_constraintTop_toBottomOf="@+id/text_view_sub_header"
            android:text="@string/siyah_carsaf_serdim" />

        <CheckBox
            android:id="@+id/checkbox_clothes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/normal_padding"
            app:layout_constraintTop_toBottomOf="@+id/checkbox_black_sheet"
            android:text="@string/child_clothes" />

        <CheckBox
            android:id="@+id/checkbox_fix_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/checkbox_clothes"
            android:layout_marginVertical="@dimen/normal_padding"
            android:text="@string/customize_camera" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_iam_ready"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/normal_padding"
            android:background="@drawable/round_button_bg"
            android:text="@string/iam_ready"
            android:textColor="@color/button_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkbox_fix_camera"
            android:textAllCaps="false" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>