<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_padding"
        android:background="@drawable/bg_button_outline"
        android:elevation="@dimen/normal_padding"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UnusedAttribute">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_view_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/info_image"
            android:orientation="vertical"
            android:padding="15dp"
            android:src="@drawable/ic_baseline_info_24" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/get_the_news"
            android:textAlignment="center"
            android:textAppearance="@style/SecondTitle" />

        <Button
            android:id="@+id/button_confirm_dialog"
            style="@style/SecondTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/large_margin"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_button"
            android:text="@string/information_correct"
            android:textAllCaps="false"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_reject_dialog"
            style="@style/TransParentStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/large_margin"
            android:layout_marginVertical="16dp"
            android:background="@drawable/bg_button_transparent"
            android:text="@string/turn_back"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </LinearLayout>


</layout>