<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.register.RegisterFragment">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/app_logo_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.532"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ada_login" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/normal_padding"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="@dimen/padding_8dp"
            android:text="@string/usage_ada"
            android:textAppearance="@style/SecondTitle"
            app:layout_constraintBottom_toTopOf="@+id/edit_text_phone_number"
            app:layout_constraintEnd_toEndOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/edit_text_phone_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/large_margin"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_edit_text"
            android:textSize="15sp"
            android:textAppearance="@style/SecondTitle"
            android:hint="@string/enter_your_phone"
            android:inputType="phone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/text_view_medical_director"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:layout_constraintVertical_bias="0"
            tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck"  />



        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/normal_padding"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center_horizontal"
            android:text="@string/welcome_ada"
            android:textAlignment="center"
            android:textAppearance="@style/TextTitle"
            app:layout_constraintBottom_toTopOf="@+id/edit_text_phone_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_padding"
            android:background="@drawable/bg_button"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@color/button_color"
            android:textAppearance="@style/FooterStyle"
            app:layout_constraintEnd_toEndOf="@+id/textView5"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_phone_number" />




        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/enter_your_phone"
            android:textColor="@android:color/black"
            android:textAppearance="@style/FooterStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/edit_text_phone_number"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/about_app"
            android:textAlignment="center"
            android:textAppearance="@style/FooterStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/button_register"
            app:layout_constraintStart_toStartOf="@+id/button_register"
            app:layout_constraintTop_toBottomOf="@+id/button_register" />

        <TextView
            android:id="@+id/text_view_medical_director"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/info_medical_director"
            android:textColor="@android:color/holo_blue_dark"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/textView7"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/secret_policy"
            android:textAppearance="@style/FooterStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_medical_director" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/usage_roles"
            android:textAppearance="@style/FooterStyle"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView9"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/edit_text_country_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:gravity="center"
            android:background="@drawable/bg_edit_text"
            android:textAppearance="@style/SecondTitle"
            android:inputType="textPersonName"
            android:text="@string/example_code"
            app:layout_constraintBottom_toBottomOf="@+id/edit_text_phone_number"
            app:layout_constraintEnd_toStartOf="@+id/edit_text_phone_number"
            app:layout_constraintStart_toStartOf="@+id/button_register"
            app:layout_constraintTop_toTopOf="@+id/edit_text_phone_number"
            android:autofillHints=""
            tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck"  />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>