<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.validation.ValidationFragment">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_validate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/next"
            android:textStyle="bold"
            android:textAppearance="@style/SecondTitle"
            android:background="@drawable/round_button_bg"
            android:textAllCaps="false"
            android:textColor="@color/button_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="@dimen/large_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_resend_code"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/text_view_resend_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_pass_again"
            android:textAppearance="@style/SecondTitle"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/time_example"
            app:layout_constraintBottom_toTopOf="@+id/text_view_resend_code"
            app:layout_constraintEnd_toEndOf="@+id/text_view_resend_code"
            app:layout_constraintStart_toStartOf="@+id/text_view_resend_code"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/edit_text_confirmation_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/large_margin"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_edit_text"
            android:ems="10"
            android:gravity="center_horizontal"
            android:inputType="number"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textAppearance="@style/SecondTitle"
            app:layout_constraintBottom_toTopOf="@+id/text_view_timer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1"
            tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/confirimation_code"
            android:textAppearance="@style/SecondTitle"
            app:layout_constraintBottom_toTopOf="@+id/edit_text_confirmation_code"
            app:layout_constraintStart_toStartOf="@+id/edit_text_confirmation_code" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>